# elab_app

./: .gitignore  README.md  app.py  auth.py  inputparsing.py  main.py  pip_requirements.txt  pyproject.toml  requirements.txt  templates.py  utils.py  version.py
pages/: about.py  comment.py  create_exp.py  create_transcript.py  exp_page.py  main_page.py  measurement_page.py  position_page.py  sample_page.py  sample_upload1.py  sketch.py  templates.py  transcribe.py  treatment_page.py
src/elab_app/: auth.py  cli.py  main.py  utils.py  version.py
src/elab_app/components/: hashtag_textarea.py
src/elab_app/components/hashtag_textarea/: index.html
src/elab_app/pages/: comment.py  create_transcript.py  main_page.py  sketch.py  templates.py  transcribe.py
src/elab_app/templates/: bake_start.yaml  cleaning_cycles_TiO2.yaml  tp_excitation_measurement.yaml  tp_measurement.yaml
templates/: example_all_options.yaml
