[project]
name = "elab-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elabapi-python>=5.2.0",
    "numpy>=1.21.0",
    "openai-whisper>=20231117",
    "pandas>=1.5.0",
    "pyaudio>=0.2.11",
    "python-dateutil>=2.8.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "soundfile>=0.12.0",
    "speechrecognition>=3.10.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.64.0",
    "typer>=0.9.0",
    "streamlit_drawable_canvas",
    "markdown>=3.10.2",
]
