[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elab_app"]

[project]
name = "elab-app"
version = "0.1.0"
description = "ElabFTW lab notebook logger"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.0.0",
    "elabapi-python>=5.2.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "tqdm>=4.64.0",
    "typer>=0.9.0",
    "streamlit_drawable_canvas",
    "markdown>=3.10.2",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.3",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
transcription = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "speechrecognition>=3.10.0",
    "pyaudio>=0.2.11",
    "soundfile>=0.12.0",
]

[project.scripts]
elab-app = "elab_app.cli:app"
